--- a/proyectos/trabajo_programacion1_2corte/src/main/java/com/mycompany/trabajo_programacion1_2corte/JfrPrincipal.form
+++ b/proyectos/trabajo_programacion1_2corte/src/main/java/com/mycompany/trabajo_programacion1_2corte/JfrPrincipal.form
@@ -11,6 +11,9 @@
           <SubComponents>
             <MenuItem class="javax.swing.JMenuItem" name="jMenuItem1">
               <Properties>
+                <Property name="accelerator" type="javax.swing.KeyStroke" editor="org.netbeans.modules.form.editors.KeyStrokeEditor">
+                  <KeyStroke key="Alt+X"/>
+                </Property>
                 <Property name="text" type="java.lang.String" value="salir"/>
               </Properties>
               <Events>
