--- a/MaquinaExpendedora/src/maquinaexpendedora/JfMaq.form
+++ b/MaquinaExpendedora/src/maquinaexpendedora/JfMaq.form
@@ -136,6 +136,7 @@
                 <Column editable="true" title="Cantidad" type="java.lang.Object"/>
               </Table>
             </Property>
+            <Property name="enabled" type="boolean" value="false"/>
           </Properties>
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
