funcion total ventas agregada

--- a/MaquinaExpendedora/src/maquinaexpendedora/JfMaq.form
+++ b/MaquinaExpendedora/src/maquinaexpendedora/JfMaq.form
@@ -64,6 +64,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Estadisticas de m&#xe1;quina"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuItem5ActionPerformed"/>
+              </Events>
             </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="jMenuItem6">
               <Properties>
